[package]
name = "source-error"
version = "0.0.0"
authors = ["softprops <d.tangren@gmail.com>"]
edition = "2018"
description = "A magical type for displaying source file errors"
license = "MIT"
readme = "README.md"
documentation = "https://docs.rs/source-error"
homepage = "https://github.com/softprops/source-error"
repository = "https://github.com/softprops/source-error"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colored = "1.8"

[dev-dependencies]
pretty_assertions = "0.6"